--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -57,6 +57,55 @@ content %}
     />
   </div>
 
+  <div class="form-group">
+    <label for="password2">Route</label>
+    <input
+      type="text"
+      class="form-control"
+      id="route"
+      name="password2"
+      placeholder="Enter Route"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="password2">Parents Phone Number</label>
+    <input
+      type="text"
+      class="form-control"
+      id=" parents_phone"
+      name="password2"
+      placeholder="Enter Parents Phone"
+    />
+  </div>
+
+
+
+  <div class="form-group">
+    <label for="password2">Student's Chat ID</label>
+    <input
+      type="text"
+      class="form-control"
+      id="password2"
+      name="password2"
+      placeholder="Enter student's chat ID"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="password2">Parent's Chat ID</label>
+    <input
+      type="text"
+      class="form-control"
+      id="parent_chat_id"
+      name="password2"
+      placeholder="Enter parent's chat ID"
+    />
+  </div>
+
+
+
+
   
   <br />
   <button type="submit" class="btn btn-primary">Submit</button>
