--- a/website/templates/student_profile.html
+++ b/website/templates/student_profile.html
@@ -37,6 +37,14 @@
         <th scope="row">Parents Phone Number</th>
         <td>{{student_detail.parents_phone}}</td>
       </tr>
+      <tr>
+        <th scope="row">Student Chat ID</th>
+        <td>{{student_detail.student_chat_id}}</td>
+      </tr>
+      <tr>
+        <th scope="row">Parents Chat ID</th>
+        <td>{{student_detail.parent_chat_id}}</td>
+      </tr>
       
     </tbody>
   </table>
