--- a/website/templates/student_home.html
+++ b/website/templates/student_home.html
@@ -97,8 +97,30 @@
 
 
 <br>
+
+
+<div class="mapouter">
+    <div class="gmap_canvas">
+        <iframe width="600" height="500" id="gmap_canvas" src="https://www.google.com/maps/place/9%C2%B053'02.8%22N+78%C2%B004'46.7%22E/@9.8841092,78.07965,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xe2424666a20ef073!8m2!3d9.8841092!4d78.07965" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+
+        </iframe>
+        <a href="https://putlocker-is.org">putlocker
+
+        </a>
+        <br>
+        <style>
+        .mapouter{position:relative;text-align:right;height:500px;width:600px;}
+        </style>
+        <a href="https://www.embedgooglemap.net">add google map
+        </a>
+        <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
+        </style>
+        </div>
+    </div>
 <!--
 
+
+"https://www.google.com/maps/search/?api=1&query="
 
 
 <div class="card-sm" style="width: 100%;">
