--- a/website/templates/student_profile.html
+++ b/website/templates/student_profile.html
@@ -38,6 +38,14 @@
         <td>{{student_detail.parents_phone}}</td>
       </tr>
       <tr>
+        <th scope="row">Home Stop</th>
+        <td>{{student_detail.home_phase}}</td>
+      </tr>
+      <tr>
+        <th scope="row">Trigger Stop</th>
+        <td>{{student_detail.trigger_phase}}</td>
+      </tr>
+      <tr>
         <th scope="row">Student Chat ID</th>
         <td>{{student_detail.student_chat_id}}</td>
       </tr>
