--- a/website/templates/admin_trip_management.html
+++ b/website/templates/admin_trip_management.html
@@ -185,6 +185,8 @@
           <th scope="col"><b>Bus No</b></th>
           <th scope="col"><b>STATUS</b></th>
           <th scope="col"><b>Current Phase</b></th>
+          
+          <th>Delete Trip</th>
         </tr>
       </thead>
         
@@ -200,6 +202,15 @@
           <th>{{t.bus_id}}</th>
           <th>{{t.status}}</th>
           <th>{{t.current_phase}}</th>
+  
+          <th>
+            <button class="btn btn-outline-secondary" onclick="delete_trip()">
+            <svg  xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="red" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+              <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+            </svg> <b>Delete</b>
+          </button>
+
+          </th>
         </tr>
         {%endfor%}
         {%endif%}
@@ -208,7 +219,6 @@
   
   </div>
   
-  <a class="btn  btn-primary " href="/" role= "button"  >Button</a><br>
 </div>
   
 
