--- a/website/templates/admin_emulator.html
+++ b/website/templates/admin_emulator.html
@@ -3,24 +3,48 @@
 
 {% block content %}
 
-<div>
-<h1>No of Sample sent = <span id = "count">0</span></h1>
+<div class="card-sm" style="width: 45rem;">
+  <H1 align="center">Mobile Phone Emulator</H1>
+  <table class="table table-dark">
+  <tr>
+    <th>Trip ID</th>
+    <th>{{trip.trip_id}}</th>
+  </tr>
+  <tr>
+    <th>Route ID</th>
+    <th>{{trip.route_id}}</th>
+  </tr>
+  <tr>
+    <th>Latitude</th>
+    <th>{{bus.lat}}</th>
+  </tr>
+  <tr>
+    <th>Longitude</th>
+    <th>{{bus.long}}</th>
+  </tr>
+  <tr>
+    <th>Current Phase</th>
+    <th>{{current_phase}}</th>
+  </tr>
+  <tr>
+    <th>No of Data points Sent </th>
+    <th><h3><span id = "count">0</span></h3></th>
+  </tr>
+</table>
 
     <button  class = "btn btn-primary" onclick="refreshGPS()">GPS UPDATE</button>
     <button  class = "btn btn-danger" onclick="setInterval(start,3000)">START</button>
-
-    
 </div>
 <br>
-    
-
-    <div class="card" style="width:18rem">
 
 
+
+    <div>
+    <div class="card" style="width: 20rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px;display: inline-block;">
     <form method="POST">
         <h1 align="center">RFID SIMULATOR</h3>
             <div class="form-group">
-                <label for="bus_id">BUS ID  : </label>
+                
                 <input
                   type="text"
                   class="form-control"
@@ -31,7 +55,7 @@
               </div>
 
         <div class="form-group">
-          <label for="email">RFID NO  : </label>
+          
           <input
             type="text"
             class="form-control"
@@ -45,21 +69,22 @@
         
         <br>
         <button type="submit" class="btn btn-danger" onclick="checkRFID()">Submit</button>
-      </form>
-
+    </form>
+    <br>
+    <button class="btn btn-primary" onclick="emulator_rfid_1()"><B>TCE00001</B></button>
+    <button class="btn btn-dark"    onclick="emulator_rfid_2()"><B>TCE00002</B></button>
+    <button class="btn btn-primary" onclick="emulator_rfid_3()"><B>TCE00003</B></button>
     </div>
 
    
 
-<br>
     
-    <div class="card "  style="width: 25rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px; display: inline-block;">
+    <div class="card "  style="width: 20rem;background: rgb(18, 121, 223);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px;display: inline-block;">
 
 
       <form method="POST">
           <h1 align="center">GPS CHECK</h3>
               <div class="form-group">
-                  <label for="lat">LAT  : </label>
                   <input
                     type="text"
                     class="form-control"
@@ -70,7 +95,6 @@
                 </div>
   
           <div class="form-group">
-            <label for="text">LONG  : </label>
             <input
               type="text"
               class="form-control"
@@ -86,6 +110,14 @@
           <button type="submit" class="btn btn-danger" onclick="check_gps()">Submit</button>
         </form>
   
-      </div>
+    </div>
+
+  </div>
+
+
+  <div class="card-sm">
+    <h1>Site Response</h1>
+    <p id = "response">{{response}}</p>
+  </div>
 {% endblock %}
 
