--- a/website/templates/student_home.html
+++ b/website/templates/student_home.html
@@ -41,13 +41,13 @@
                 Trip Status
             </th>
             {%if trip.status =="COMPLETED" %}
-            <th style="background-color:rgb(221, 44, 31);" colspan="2">{{trip.status}}</th>
+            <th style="background-color:rgb(221, 44, 31);" colspan="2"><h5 align="center">{{trip.status}}</h5></th>
             {%endif%}
             {%if trip.status =="INITIATED" %}
-            <th style="background-color:rgb(66, 178, 248);" colspan="2">{{trip.status}}</th>
+            <th style="background-color:rgb(66, 178, 248);" colspan="2"><h5 align="center">{{trip.status}}</h5></th>
             {%endif%}
             {%if trip.status =="CREATED" %}
-            <th style="background-color:rgb(255, 237, 79);" colspan="2">{{trip.status}}</th>
+            <th style="background-color:rgb(255, 237, 79);" colspan="2"><h5 align="center">{{trip.status}}</h5></th>
             {%endif%}
             
         </tr>
@@ -98,25 +98,6 @@
 
 <br>
 
-
-<div class="mapouter">
-    <div class="gmap_canvas">
-        <iframe width="600" height="500" id="gmap_canvas" src="https://www.google.com/maps/place/9%C2%B053'02.8%22N+78%C2%B004'46.7%22E/@9.8841092,78.07965,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xe2424666a20ef073!8m2!3d9.8841092!4d78.07965" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-
-        </iframe>
-        <a href="https://putlocker-is.org">putlocker
-
-        </a>
-        <br>
-        <style>
-        .mapouter{position:relative;text-align:right;height:500px;width:600px;}
-        </style>
-        <a href="https://www.embedgooglemap.net">add google map
-        </a>
-        <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
-        </style>
-        </div>
-    </div>
 <!--
 
 
