gud up until now

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -102,6 +102,26 @@ content %}
       placeholder="Enter parent's chat ID"
     />
   </div>
+  <div class="form-group">
+    <label for="password2">Home Phase</label>
+    <input
+      type="text"
+      class="form-control"
+      id="home_phase"
+      name="password2"
+      placeholder="Enter home Phase"
+    />
+  </div>
+  <div class="form-group">
+    <label for="password2">Trigger Phase</label>
+    <input
+      type="text"
+      class="form-control"
+      id="trigger_phase"
+      name="password2"
+      placeholder="Enter Trigger Phase"
+    />
+  </div>
 
 
 
