--- a/website/templates/student_home.html
+++ b/website/templates/student_home.html
@@ -15,7 +15,7 @@
   <br>  
 <!--TRIP DETAILS AND PROGRESS-->
 
-
+{% if trip %}
 <div  style="align-content: center;border-radius: 50px;">
     <table class="table table-dark">
     
@@ -94,7 +94,7 @@
     </table>
 </div>
 
-
+{%endif%}
 
 <br>
 
