--- a/website/templates/admin_fleet_management.html
+++ b/website/templates/admin_fleet_management.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div>
     <h1 align="center">Bus Management</h1>
-    <table class = "table table-striped table-dark">
+    <table class = "table table-striped table-primary">
         <tr>
             <th>Bus No</th>
             <th>Plate No</th>
@@ -19,7 +19,7 @@
         <th>{{b.gps}}</th>
         <th>
             
-            <button href="/test"> 
+            <button onclick="newTab({{b.lat}} , {{b.long}})" class="btn btn-outline-info "> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                 </svg>
@@ -34,22 +34,26 @@
 
 <div>
     <h1 align="center">Route Management</h1>
-    <table class = "table table-striped table-dark" >
+    <table class = "table table-striped table-danger" >
         <tr>
+            <th>ID</th>
             <th>Route ID</th>
             <th>Session</th>
             <th>Starting stop</th>
             <th>Ending Stop</th>
             <th>Phases</th>
+            <th></th>
         </tr>
 
         {% for r in routes %}
         <tr>
+        <th>{{r.id}}</th>
         <th>{{r.route_id}}</th>
         <th>{{r.session}}</th>
         <th>{{r.start}}</th>
         <th>{{r.end}}</th>
         <th>{{r.phases}}</th>
+        <th><button class="btn btn-danger">Edit Route</button></th>
         </tr>
         {%endfor%}
     </table>
@@ -59,7 +63,7 @@
 
 <div>
     <h1 align="center">Location Referances</h1>
-    <table class="table table-striped  table-dark">
+    <table class="table table-striped  table-success">
         <tr>
             <th>ID</th>
             <th>Name</th>
