--- a/website/templates/admin_home.html
+++ b/website/templates/admin_home.html
@@ -18,11 +18,53 @@
 </b></button>
 </div>
 
-<!-- TRIP DAHSBOARD-->
+<br>
+
 <div>
-  
+  <table class="table table-striped table-dark">
+    <tr>
+      <th colspan="3"><h2 align="center"><b>Site Settings</b></h2></th>
+    </tr>
+    <tr>
+      <th>Setting</th>
+      <th>Value</th>
+      <th>Edit</th>
+    </tr>
+    {% for s in ss %}
+      <tr>
+        <th>{{s.key}}</th>
+        <th>{{s.value}}</th>
+        <th><button class="btn btn-danger">Edit</button></th>
+      </tr>
+    {% endfor%}
+
+  </table>
 </div>
 
+<br>
+
+<!-- TRIP DAHSBOARD-->
+<div>
+      <table class="table table-info">
+        <tr>
+          <th colspan="2"><h2 align="center"><b>Trip Details</b></h2></th>
+          {% for trip in trips%}
+          <tr>
+            <th colspan="2">
+              <h3>Trip ID <span class="badge bg-info">{{trip.trip_id}}</span></h3>
+              <h3>Route ID <span class="badge bg-info">{{trip.route_id}}</span></h3>
+              <h3>Conductor ID <span class="badge bg-info">{{trip.conductor_id}}</span></h3>
+              <h3>Session<span class="badge bg-info">{{trip.session}}</span></h3>
+              <h3>Status <span class="badge bg-info">{{trip.status}}</span></h3>
+              <h3>Bus ID <span class="badge bg-info">{{trip.bus_id}}</span></h3>
+
+            </th>
+          </tr>
+          {%endfor%}
+
+      </table>
+  
+</div>
 
 <br>
 {% endblock %}
