--- a/website/templates/admin_fleet_management.html
+++ b/website/templates/admin_fleet_management.html
@@ -53,7 +53,7 @@
         <th>{{r.start}}</th>
         <th>{{r.end}}</th>
         <th>{{r.phases}}</th>
-        <th><button class="btn btn-danger">Edit Route</button></th>
+        <th><button class="btn btn-outline-danger">Edit Route</button></th>
         </tr>
         {%endfor%}
     </table>
@@ -69,6 +69,8 @@
             <th>Name</th>
             <th>Lat</th>
             <th>Long</th>
+            <th>Map</th>
+            <th></th>
         </tr>
         {% for l in locations %}
         <tr>
@@ -76,6 +78,8 @@
             <th>{{l.name}}</th>
             <th>{{l.lat}}</th>
             <th>{{l.long}}</th>
+            <th><button class="btn btn-outline-success" onclick="newTab({{l.lat}} ,{{l.long}})">Map</button></th>
+            <th><button class="btn btn-danger">Delete</button></th>
         </tr>
         {%endfor%}
     </table>
