So long its been , stable

--- a/website/templates/admin_home.html
+++ b/website/templates/admin_home.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 <!-- WORKING DAY DASHBOARD-->
-<div  style="background-color: rgb(243, 148, 70);align-content: center ;text-align: center ;margin-left: 5px;margin-right: 5px;padding-left: 5px;padding-right:5px ; padding-bottom : 10px;border-radius: 50px;">  
+<br>
+<div class="container-md" style="background-color: rgb(243, 148, 70);align-content: center ;text-align: center ;margin-left: 5px;margin-right: 5px;padding-left: 5px;padding-right:5px ; padding-bottom : 10px;border-radius: 50px;">  
   <h1><b>WORKING DAY</h1></b>
   <h2>DAY  <span class="badge bg-warning">{{w.day}}</span></h2>
   <h2>DATE <span class="badge bg-warning">{{w.date}}</span></h2>
@@ -20,7 +21,7 @@
 
 <br>
 
-<div>
+<div class="conatiner-md">
   <table class="table table-striped table-dark">
     <tr>
       <th colspan="3"><h2 align="center"><b>Site Settings</b></h2></th>
