--- a/website/templates/admin_trip_management.html
+++ b/website/templates/admin_trip_management.html
@@ -5,7 +5,7 @@
 <div align="centre" class = "container">
 <!--Working day table-->
   <div >
-      <h1 align = "center">Working Day</h1>
+      <h1 align = "center" class="heading">Working Day</h1>
       <!-- DETAILS-->
     <table class="table table-striped">
       <thead>
@@ -42,7 +42,7 @@
 <!--Week Book form-->
   <div class ="card" style="width: 25rem;background: rgb(146, 170, 243);margin-left: 5px;margin-right: 5px;padding-left: 5px;padding-right:5px ; padding-bottom : 10px; display: inline-block;" >
   <form method="POST">
-    <h1 align="center">Week Book</h3>
+    <h1 align="center" class="heading">Week Book</h3>
       
     <div class="form-group">
       <label for="Week starting date" style="font-size: larger;">Week Starting Date</label>
@@ -93,7 +93,7 @@
 <!--CREATE TRIP FORMs-->
 <div class ="card" style="width: 25rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px; display: inline-block;" >
   <form method="POST">
-    <h1 align="center">Trip Book</h3>
+    <h1 align="center" class="heading">Trip Book</h3>
       
       <table class="table table-striped">
         <thead>
@@ -172,7 +172,7 @@
 <div align="centre" class = "container">
 
   <div>
-      <h1 align = "center">Trips</h1>
+      <h1 align = "center" class="heading">Trips</h1>
       <!-- DETAILS-->
     <table class="table table-striped">
       <thead>
