--- a/website/templates/admin_fleet_management.html
+++ b/website/templates/admin_fleet_management.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <h1 align="center">Bus Management</h1>
+    <h1 class="heading" >Bus Management</h1>
     <table class = "table table-striped table-primary">
         <tr>
             <th>Bus No</th>
@@ -33,7 +33,7 @@
 
 
 <div>
-    <h1 align="center">Route Management</h1>
+    <h1 align="center" class="heading" >Route Management</h1>
     <table class = "table table-striped table-danger" >
         <tr>
             <th>ID</th>
@@ -62,7 +62,7 @@
 
 
 <div>
-    <h1 align="center">Location Referances</h1>
+    <h1 align="center" class="heading" >Location Referances</h1>
     <table class="table table-striped  table-success">
         <tr>
             <th>ID</th>
