--- a/website/templates/admin_user_management.html
+++ b/website/templates/admin_user_management.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div>
-    <h1 align="center">Student Details</h1>
+    <h1 align="center" class="heading">Student Details</h1>
     <table class="table table-striped table-dark">
         <tr>
             <th>ID</th>
@@ -37,13 +37,14 @@
         </tr>
         {%endfor%}
     </table>
-    <button class="btn btn-outline-primary" onclick="" >
+    
+    <a class="btn btn-outline-primary" href="/sign-up" >
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
             <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
             <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
         </svg>
         <b> Add Student</b>
-    </button>
+    </a>
 </div>
 
 {% endblock %}
