--- a/website/templates/admin_login.html
+++ b/website/templates/admin_login.html
@@ -2,6 +2,8 @@
 {% block title %} Admin Login {% endblock %} 
 
 {% block content %}
+<div class="login-box">
+
 <form method="POST">
     <h3 align="center">Admin Login</h3>
     <div class="form-group">
@@ -27,4 +29,7 @@
     <br />
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+
+    
+</div>
 {% endblock %}
