--- a/website/templates/student_home.html
+++ b/website/templates/student_home.html
@@ -68,6 +68,10 @@
             <th colspan="2">Current Phase</th>
             <th colspan="2" style="background-color:rgb(108, 108, 108);">{{trip.current_phase}}</th>
         </tr>
+        <tr>
+            <th colspan="2">Distance of Bus from Stop</th>
+            <th colspan="2" style="background-color:rgb(108, 108, 108);">{{distance}} KM</th>
+        </tr>
 
         <tr>
             <td></td>
