--- a/website/templates/student_login.html
+++ b/website/templates/student_login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 {% block title %}STUDENT Login{% endblock %} 
 {% block content%}
-
+<div class="login-box">
 <form method="POST">
   <h3 align="center">User Login</h3>
   <div class="form-group">
@@ -29,4 +29,5 @@
 </form>
 <br>
 <a class="btn btn-primary btn-lg btn-block" href="/sign-up" role="button"  >Sign Up</a><br>
+</div>
 {% endblock %}
