--- a/website/templates/student_trip_history.html
+++ b/website/templates/student_trip_history.html
@@ -2,7 +2,7 @@
 {% block title %}Student Trip History{% endblock %} 
 
 {% block content %}
-<div>
+<div class="container">
     <table class="table table-secondary table-striped">
         <tr>
             <th><b>Ticket ID</b></th>   
