--- a/website/templates/admin_emulator.html
+++ b/website/templates/admin_emulator.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="card-sm" style="width: 45rem;">
-  <H1 align="center">Mobile Phone Emulator</H1>
+  <H1 align="center" class="heading">Mobile Phone Emulator</H1>
   <table class="table table-dark">
   <tr>
     <th>Trip ID</th>
@@ -34,6 +34,7 @@
 
     <button  class = "btn btn-primary" onclick="refreshGPS()">GPS UPDATE</button>
     <button  class = "btn btn-danger" onclick="setInterval(start,1000)">START</button>
+    <button  class = "btn btn-danger" onclick="bus_breakdown_alert(1)">Alert Admin</button>
 </div>
 <br>
 
@@ -42,7 +43,7 @@
     <div>
     <div class="card" style="width: 20rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px;display: inline-block;">
     <form method="POST">
-        <h1 align="center">RFID SIMULATOR</h3>
+        <h1 align="center" class="heading">RFID</h3>
             <div class="form-group">
                 
                 <input
@@ -83,7 +84,7 @@
 
 
       <form method="POST">
-          <h1 align="center">GPS CHECK</h3>
+          <h1 align="center" class="heading">GPS</h3>
               <div class="form-group">
                   <input
                     type="text"
