--- a/website/templates/admin_financial_stats.html
+++ b/website/templates/admin_financial_stats.html
@@ -2,6 +2,22 @@
 {% block title %} Admin Financial Stats {% endblock %} 
 
 {% block content %}
-
+<h1 align="center" class="heading" >Fare Collection</h1>
+<table class="table table-striped  table-success">
+    <tr>
+        <th>Route ID</th>
+        <th>Total Distances</th>
+        <th>Fare</th>
+    </tr>
+    {%for record in data%}
+    <tr>
+        
+        <td>{{record[0]}}</td>
+        <td>{{record[1]}} KM</td>
+        <td>Rs . {{record[2]}}</td>
+    </tr>
+    {%endfor%}
+</table>
+</div>
 
 {% endblock %}
