--- a/website/templates/conductor_login.html
+++ b/website/templates/conductor_login.html
@@ -2,7 +2,7 @@
 {% block title %} Conductor Login {% endblock %} 
 
 {% block content %}
-
+<div class="login-box">
 <form method="POST">
     <h3 align="center">Conductor Login</h3>
     <div class="form-group">
@@ -28,4 +28,5 @@
     <br />
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+</div>
 {% endblock %}
