--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -11,7 +11,7 @@ content %}
   }
 </style>
 <form method="POST">
-  <h1 align="center" class="meh">Sign Up</h3>
+  <h1 align="center" class="heading">Sign Up</h3>
     
   <div class="form-group">
     <label for="email">Email Address</label>
